@@ -1,4 +1,4 @@
-# $Id: configure.ac,v 1.129 2004/12/06 21:49:33 manu Exp $
+# $Id: configure.ac,v 1.130 2004/12/08 17:49:48 manu Exp $
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
@@ -68,6 +68,31 @@ AC_FUNC_SELECT_ARGTYPES
 AC_FUNC_SETVBUF_REVERSED
 AC_FUNC_STAT
 AC_CHECK_FUNCS([bzero gettimeofday malloc inet_ntoa strerror select socket])
+
+# Try to configure for libspf2
+SAVEDLDFLAGS=$LDFLAGS
+SAVEDCFLAGS=$CFLAGS
+AC_ARG_WITH(libspf2,
+       [  --with-libspf2=DIR  Find libspf2 in DIR],
+       [LDFLAGS=$LDFLAGS" -L$withval/lib -Wl,$rpath$withval/lib"
+           CFLAGS=$CFLAGS" -I$withval/include"
+           AC_CHECK_LIB(spf2, SPF_create_config, [
+               SAVEDLDFLAGS=$LDFLAGS
+               SAVEDCFLAGS=$CFLAGS
+               LIBS=$LIBS"-lspf2"
+               AC_DEFINE([HAVE_SPF2], [], [we use libspf2])
+               ],[AC_CHECK_LIB([spf2 -lintl],  SPF_create_config, [
+                       SAVEDLDFLAGS=$LDFLAGS
+                       SAVEDCFLAGS=$CFLAGS
+                       LIBS=$LIBS"-lspf2 -lintl"
+                       AC_DEFINE([HAVE_SPF2], [], [we use libspf2])
+               ], [echo "libspf2 not found, check config.log for details"
+                   echo "Remove --with-libspf2 to build without SPF support"
+                   exit 1;])
+       ])
+])
+LDFLAGS=$SAVEDLDFLAGS
+CFLAGS=$SAVEDCFLAGS
 
 # Try to configure for libspf_alt
 SAVEDLDFLAGS=$LDFLAGS
